k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mywebapp-service
spec:
  type: NodePort
  selector:
    app: mywebapp
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30001
